<resources>
    <string name="app_name">Me-MG</string>
    <string name="exercise">Exercise</string>
    <string name="report">Report</string>
    <string name="extras">Extras</string>
    <string name="logo">Logo</string>
    <string name="select_ex">Select Exercise: </string>
    <string name="Start">Start</string>
    <string name="connect">Connect to Me-MG</string>
    <string name="disconnect">Disconnect from Me-MG</string>
    <string name="begin">Begin Session</string>
    <string name="stop">Stop</string>
    <string name="parameters">Parameters:</string>
    <string name="duration">Duration:</string>
    <string name="reps_percent">% Reps Completed:</string>
    <string name="what_press">What\'s the pressure??</string>
    <string name="hPA">hectopascal (hPa)</string>
    <string name="credits">Me-MG Android App by Tim Scott 2018</string>
</resources>
